--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
+    <section>
+        <div><img src="./src/imgs/image1.png"></div>
+        <div><img src="./src/imgs/image2.png"></div>
+        <div><img src="./src/imgs/image3.png"></div>
+        <div><img src="./src/imgs/image4.png"></div>
+        <div><img src="./src/imgs/image5.png"></div>
+    </section>
     <div id="previous">
         &#8592;
     </div>
     <div id="pokemons" >
-        <img id="pokemon" src="./src/imgs/image1.png">
-        <img id="pokemon" src="./src/imgs/image2.png">
-        <img id="pokemon" src="./src/imgs/image3.png">
-        <img id="pokemon" src="./src/imgs/image4.png">
         <img id="pokemon" src="./src/imgs/image5.png">
     </div>
     <div id="next">
