--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
-    <section>
+    <section id="nav">
         <div><img src="./src/imgs/image1.png"></div>
         <div><img src="./src/imgs/image2.png"></div>
         <div><img src="./src/imgs/image3.png"></div>
         <div><img src="./src/imgs/image4.png"></div>
         <div><img src="./src/imgs/image5.png"></div>
     </section>
+    <section id="big">
     <div id="previous">
         &#8592;
     </div>
@@ -24,6 +25,15 @@
     <div id="next">
         &#8594;
     </div>
+    </section >
+    <section id="startstop">
+    <div id="stop">
+        <p>stop</p>
+    </div>
+    <div id="start">
+        <p>start</p>
+    </div>
+    </section>
     <script src="./src/script.js"></script>
 </body>
 </html>
