--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,33 +8,25 @@
     <title>Document</title>
     <link rel="stylesheet" href="./src/style.css">
 </head>
+
 <body>
     <section id="nav">
-        <div><img src="./src/imgs/image1.png"></div>
-        <div><img src="./src/imgs/image2.png"></div>
-        <div><img src="./src/imgs/image3.png"></div>
-        <div><img src="./src/imgs/image4.png"></div>
-        <div><img src="./src/imgs/image5.png"></div>
+        <div>
+            <p><img src="./src/imgs/banner.png"></p>
+        </div>
     </section>
     <section id="big">
-    <div id="previous">
-        &#8592;
-    </div>
-    <div id="pokemons" >
-        <img id="pokemon" src="./src/imgs/image5.png">
-    </div>
-    <div id="next">
-        &#8594;
-    </div>
-    </section >
-    <section id="startstop">
-    <div id="stop">
-        <p>stop</p>
-    </div>
-    <div id="start">
-        <p>start</p>
-    </div>
+        <div id="previous">
+            &#8592;
+        </div>
+        <div id="pokemons">
+            <input type="checkbox" id="picture"><label for="picture"><img id="pokemon" src="./src/imgs/image5.png"></label>
+        </div>
+        <div id="next">
+            &#8594;
+        </div>
     </section>
     <script src="./src/script.js"></script>
 </body>
+
 </html>
