--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             &#8594;
         </div>
     </section>
+    <section id="inne">
+        <div class="in" id="rrotate">
+            <p>Obróć w prawo</p>
+        </div>
+        <div class="in" id="lrotate">
+            <p>Obróć w lewo</p>
+        </div>
+    </section>
     <script src="./src/script.js"></script>
 </body>
 
