--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -7,34 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./src/style.css">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
+    <div class="booody">
     <section id="nav">
-        <div>
-            <p><img src="./src/imgs/banner.png"></p>
+        <div class="zdjecie">
+            <marquee id = "dupa"><p><img src="./src/imgs/banner.png"></p></marquee>
         </div>
     </section>
     <section id="big">
         <div id="previous">
-            &#8592;
+            <span><a>next</a></span>
+            <section id="prev">
+            <span><a href="#"></a></span>
+        </section>
         </div>
         <div id="pokemons">
             <input type="checkbox" id="picture"><label for="picture"><img id="pokemon" src="./src/imgs/image5.png"></label>
         </div>
         <div id="next">
-            &#8594;
+            <span><a href="#"><ion-icon name="play-forward"></ion-icon></a></span>
+            <section id="nxt">
+            <span><a href="#"></a></span>
+            </section>
         </div>
     </section>
     <section id="inne">
         <div class="in" id="rrotate">
-            <p>Obróć w prawo</p>
         </div>
         <div class="in" id="lrotate">
-            <p>Obróć w lewo</p>
         </div>
     </section>
     <script src="./src/script.js"></script>
+    </div>
 </body>
 
 </html>
