--- a/index.html
+++ b/index.html
@@ -13,35 +13,36 @@
 
 <body>
     <div class="booody">
-    <section id="nav">
-        <div class="zdjecie">
-            <marquee id = "dupa"><p><img src="./src/imgs/banner.png"></p></marquee>
-        </div>
-    </section>
-    <section id="big">
-        <div id="previous">
-            <span><a>next</a></span>
-            <section id="prev">
-            <span><a href="#"></a></span>
+        <section id="nav">
+            <div class="zdjecie">
+                <marquee id="dupa">
+                    <p><img src="./src/imgs/banner.png"></p>
+                </marquee>
+            </div>
         </section>
-        </div>
-        <div id="pokemons">
-            <input type="checkbox" id="picture"><label for="picture"><img id="pokemon" src="./src/imgs/image5.png"></label>
-        </div>
-        <div id="next">
-            <span><a href="#"><ion-icon name="play-forward"></ion-icon></a></span>
-            <section id="nxt">
-            <span><a href="#"></a></span>
-            </section>
-        </div>
-    </section>
-    <section id="inne">
-        <div class="in" id="rrotate">
-        </div>
-        <div class="in" id="lrotate">
-        </div>
-    </section>
-    <script src="./src/script.js"></script>
+        <section id="big">
+            <!-- <div id="previous">
+                <span><a></a></span>
+                <section id="prev">
+                    <span><a></a></span>
+                </section>
+            </div> -->
+            <div id="pokemons">
+                <input type="checkbox" id="picture"><label for="picture"><img id="pokemon" src="./src/imgs/image5.png"></label>
+            </div>
+            <div id="next">
+                <section>
+                    <span id="nxt"><a></a></span>
+                </section>
+            </div>
+        </section>
+        <section id="inne">
+            <div class="in" id="rrotate">
+            </div>
+            <div class="in" id="lrotate">
+            </div>
+        </section>
+        <script src="./src/script.js"></script>
     </div>
 </body>
 
