--- a/index.html
+++ b/index.html
@@ -12,29 +12,32 @@
 </head>
 
 <body>
-<<<<<<< HEAD
     <div class="booody">
         <section id="nav">
             <div class="zdjecie">
-                <marquee id="dupa">
-                    <p><img src="./src/imgs/banner.png"></p>
+                <marquee id="pikachu">
+                    <img src="./src/imgs/banner.png">
                 </marquee>
+                <p id="baner">POKEMONS</p>
             </div>
         </section>
         <section id="big">
-            <!-- <div id="previous">
-                <span><a></a></span>
+            <div id="previous">
+                <button id="lewyPierwszy" class="button-85" role="button"><ion-icon name="play-skip-back-outline"></ion-icon></button>
                 <section id="prev">
-                    <span><a></a></span>
+                    <button id="lewyDrugi" class="button-85" role="button"><ion-icon name="swap-vertical-outline"></ion-icon></button>
                 </section>
-            </div> -->
+                <button id="lewyTrzeci" class="button-85" role="button"><ion-icon name="reload-outline"></ion-icon></button>
+            </div>
             <div id="pokemons">
-                <input type="checkbox" id="picture"><label for="picture"><img id="pokemon" src="./src/imgs/image5.png"></label>
+                <img class="pokemon" id="pokemon" src="./src/imgs/image5.png">
             </div>
             <div id="next">
-                <section>
-                    <span id="nxt"><a></a></span>
+                <button id="prawyPierwszy" class="button-85" role="button"><ion-icon name="play-skip-forward-outline"></ion-icon></button>
+                <section id="nxt">
+                    <button id="prawyDrugi" class="button-85" role="button"><ion-icon name="swap-horizontal-outline"></ion-icon></button>
                 </section>
+                <button id="prawyTrzeci" class="button-85" role="button"><ion-icon name="scan-circle-outline"></ion-icon></button>
             </div>
         </section>
         <section id="inne">
@@ -42,28 +45,10 @@
             </div>
             <div class="in" id="lrotate">
             </div>
+            <footer>Paweł Koc 4j</footer>
         </section>
         <script src="./src/script.js"></script>
     </div>
-=======
-    <section id="nav">
-        <div>
-            <p><img src="./src/imgs/banner.png"></p>
-        </div>
-    </section>
-    <section id="big">
-        <div id="previous">
-            &#8592;
-        </div>
-        <div id="pokemons">
-            <input type="checkbox" id="picture"><label for="picture"><img id="pokemon" src="./src/imgs/image5.png"></label>
-        </div>
-        <div id="next">
-            &#8594;
-        </div>
-    </section>
-    <script src="./src/script.js"></script>
->>>>>>> parent of acb450e (git)
 </body>
 
 </html>
